# qml-trading

./: .antigravityignore  .gitignore  .pyreignore  BACKTEST_REVALIDATION_REPORT.md  CLAUDE.md  DASHBOARD_GUIDE.md  Dockerfile  GIT_QUICK_REFERENCE.md  LICENSE  MASTER_REDESIGN.md  Makefile  NEXT_STEPS.md  PERFORMANCE_INSTALLED.md  PRE_LAUNCH_VERIFICATION_DOSSIER.md  PRODUCTION_SYSTEM.md  QML PATTERN EXPLAINED.md  QUICKSTART.md  README.md  REPOSITORY_SETUP.md  RESEARCH_JOURNAL.md  ROAD MAP.md  SYSTEM_CONTEXT.md  VISUAL_LAB_GUIDE.md  VRD_2.0_System_Overview.md  btc_backtest_labels.csv  cursor_qml_trading_system_strategic_aud.md  docker-compose.yml  example (dont follow exact)  pattern_audit_matches.csv  pyproject.toml  qml_colab_visualizer.py  qml_patterns_export.csv  requirements-performance.txt  requirements.txt  revalidation_equity.csv  revalidation_trades.csv  validation_report.ipynb  visual_lab.ipynb
.github/: pull_request_template.md
.obsidian/: workspace.json
.streamlit/: config.toml
archive/: btc_atr_detection.csv  btc_backtest_atr_dc.csv
cli/: run_backtest.py  run_grid_search.py  run_validation.py  run_vrd_validation.py
config/: __init__.py  default.yaml  forward_test_config.json
data/: comprehensive_features.csv  regime_dataset.csv
docker/: init-db.sql
docs/: CODE_AUDIT_LIBRARIES.md  COMPREHENSIVE_SYSTEM_REVIEW_2026-01-24.md  FINAL_STRATEGY_SPECIFICATION.md  INSTALL_SKILLS_PROMPT.md  Pattern_Viz_Engine_Overview.md  Performance_Optimization.md  Prompt_1_Architecture_Overview.md  Prompt_2_Crypto_Data_Integration.md  QML_PATTERN_REFERENCE.md  (+14 more)
(+492 files in other folders)
