[tool.poetry]
name = "qml-trading-system"
version = "0.1.0"
description = "Institutional-grade QML (Quasimodo) Pattern Detection & ML Trading System for Crypto Swing Trading"
authors = ["QML System Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# Data & Exchange
ccxt = "^4.2.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
# Database
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.0"
# ML & Statistics
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
optuna = "^3.5.0"
scipy = "^1.12.0"
# Backtesting
vectorbt = "^0.26.0"
# Visualization & UI
plotly = "^5.18.0"
streamlit = "^1.31.0"
matplotlib = "^3.8.0"
# Alerts
python-telegram-bot = "^20.7"
# Utilities
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
tqdm = "^4.66.0"
joblib = "^1.3.0"
pytz = "^2024.1"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

